Make docs-as-tests the default authoring path.
Ship DocsSite/DocSpecSuite and teach sbt-specular to build from the Test classpath with explicit product meta, so adopters stop hand-rolling BuildSite boilerplate.